npm postinstall multiple tasks delimited by &&

--- a/foundation/AngularJS/1.x/basic_chat/package.json
+++ b/foundation/AngularJS/1.x/basic_chat/package.json
@@ -4,7 +4,7 @@
     "description": "Comapi Chat Demo",
     "scripts": {
         "start": "node server.js",
-        "postinstall": "bower install & grunt build"
+        "postinstall": "bower install && grunt build"
     },
     "dependencies": {
         "bower": "^1.8.0",
