--- a/chat-layer/AngularJS/1.x/basic_chat/bower.json
+++ b/chat-layer/AngularJS/1.x/basic_chat/bower.json
@@ -25,6 +25,7 @@
     "comapi-sdk-js-foundation": "^1.0.0",
     "kjur-jsrsasign": "jsrsasign#^7.1.3",
     "angular-growl-v2": "angular-growl-2#^0.7.9",
-    "angular-base64-upload": "^0.1.23"
+    "angular-base64-upload": "^0.1.23",
+    "comapi-sdk-js-chat": "^1.0.0"
   }
 }
