--- a/foundation/AngularJS/1.x/basic_chat/bower.json
+++ b/foundation/AngularJS/1.x/basic_chat/bower.json
@@ -20,9 +20,11 @@
     "bootstrap": "3.3.7",
     "font-awesome": "^4.6.3",
     "angular": "1.5.9",
+    "angular-sanitize": "1.5.9",
     "angular-bootstrap": "2.2.0",
     "comapi-sdk-js-foundation": "^1.0.0",
     "kjur-jsrsasign": "jsrsasign#^7.1.3",
-    "angular-growl-v2": "angular-growl-2#^0.7.9"
+    "angular-growl-v2": "angular-growl-2#^0.7.9",
+    "angular-base64-upload": "^0.1.23"
   }
 }
